--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<title></title>
 </head>
 <body>
-	<a href="/index.html"><h2>index</h2></a>
-	<a href="/index2.html"><h2>index2</h2></a>
+	<a href="index.html"><h2>index</h2></a>
+	<a href="index2.html"><h2>index2</h2></a>
 	<button id="button">click me</button>
 
 	<script type="text/javascript">
