--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			  url: $(this).attr('href')
 			})
 			  .done(function( msg ) {
-			  	$(body).innerHtml(msg);
+			  	$(document).innerHtml(msg);
 			  });
 
 		});
