--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="html">
 <head>
 	<meta charset="utf-8">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -19,7 +19,7 @@
 			  url: $(this).attr('href')
 			})
 			  .done(function( msg ) {
-			  	$(document).innerHtml(msg);
+			  	document.getElementById("html").innerHTML =msg;
 			  });
 
 		});
