--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 	<script type="text/javascript">
 		$('a').on('click',function(e){
 			e.preventDefault();
-
+			var href= $(this).attr('href');
 			$.ajax({
 			  method: "GET",
-			  url: $(this).attr('href')
+			  url: href
 			})
 			  .done(function( msg ) {
+			  	history.pushState({}, null, href);
 			  	document.getElementById("html").innerHTML =msg;
+
 			  });
 
 		});
