--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="html">
 <head>
 	<meta charset="utf-8">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -8,6 +8,7 @@
 <body>
 	<a href="index.html"><h2>index</h2></a>
 	<a href="index2.html"><h2>index2</h2></a>
+	<h1>PAGE 2</h1>
 	<button id="button">click me</button>
 
 	<script type="text/javascript">
@@ -19,7 +20,7 @@
 			  url: href
 			})
 			  .done(function( msg ) {
-			  	parent.location.hash = href;
+			  	//parent.location.hash = href;
 			  	document.getElementById("html").innerHTML =msg;
 			  });
 
